# sf-lwc-test

./: .gitignore  LICENSE  README.md  generate_models.py  log_viewer.py  pyproject.toml  requirements.txt  requirements_dev.txt  run.bat  run.sh  setup_sample_data.py
config/: config.toml
docs/: api_reference.md  architecture.md  index.md  logging.md  lwc_flow.md  overview.md  queue.md  storage_flow.md  troubleshooting.md  worker_flow.md
salesforce_lwc/: .eslintignore  README.md  package-lock.json  package.json
salesforce_lwc/src/modules/: h.txt
salesforce_server/app/: app.py  restapi_models.py  server.py
salesforce_server/app/api/: apex_router.py  auth_router.py  cdc_router.py  lwc_router.py  restapi_router.py
salesforce_server/app/services/: object_manager.py
salesforce_server/app/sobjects/: base.py  content_ducument_link.py  content_version.py  content_version_data.py  download_master.py
schema/: schema.json
secret_key/: generate.bat  jwt_test.py
storage/files/: file_10.csv  file_11.json  file_2.json  file_3.csv  file_5.xlsx  file_6.json  file_7.xlsx  file_9.json
storage/queue/error/: DM-001.json  DM-1.json  DM-10.json  DM-11.json  DM-5.json  DM-6.json
storage_server/app/: config_loader.py  const.py  logging_config.py  logging_context.py  logging_decorator.py  logging_utils.py  models.py  queue_manager.py  server.py
storage_server/app/api/: routers.py
storage_server/app/security/: crypto.py
storage_server/app/worker/: auth.py  http_client.py  notify.py  token.py  version_data.py  worker_executor.py  worker_loop.py
(+11 files in other folders)
